@@ -1,3 +1,7 @@
+2009-10-01
+
+	* libsylph/imap.c: refactored.
+
 2009-09-30
 
 	* libsylph/imap.c: execute imap_cmd_fetch() in another thread.
